# vk_albums_saver

./: pyproject.toml
tests/: test_vk_albums_saver.py
vk_albums_saver/: main.py
